--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ds-react-table",
+  "name": "tw-lib",
   "version": "1.0.4",
   "description": "Dead simple react table",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types.d.ts",
   "files": [
     "dist/*"
   ],
@@ -14,7 +14,7 @@
     "build-storybook": "storybook build",
     "linter": "eslint src",
     "auto-fix": "eslint --fix src",
-    "build-lib": "rollup -c",
+    "build": "rollup -c",
     "coverage": "react-scripts test --env=jsdom --coverage --collectCoverageFrom=!src/**/*.stories.js",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls"
   },
@@ -86,5 +86,15 @@
     "hooks": {
       "pre-commit": "npm run linter"
     }
+  },
+  "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.274.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
