--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/julekgwa/ds-react-table.git"
+    "url": "git+https://github.com/julekgwa/tw-lib.git"
   },
   "keywords": [
     "react table",
@@ -32,9 +32,9 @@
   "author": "Junius Lekgwara",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/julekgwa/ds-react-table/issues"
+    "url": "https://github.com/julekgwa/tw-lib/issues"
   },
-  "homepage": "https://github.com/julekgwa/ds-react-table#readme",
+  "homepage": "https://github.com/julekgwa/tw-lib#readme",
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-react": "^7.14.5",
